# copilot-for-design-exercises

./: .gitignore  .gitmessage  .pre-commit-config.yaml  README.md  settings.gradle  setup.cfg
.devcontainer/: devcontainer.json
copilot_for_design/exercises/q1/: README.md  low_gas_indicator.py
lib/src/main/java/copilot_for_design/exercises/: README.md
lib/src/main/java/copilot_for_design/exercises/q1/: Afterword.java  Book.java  Chapter.java  Dedication.java  README.md  TitlePage.java
lib/src/main/java/copilot_for_design/exercises/q2/: README.md  SimulationController.java  ThirdPartyLibrary.java
lib/src/main/java/copilot_for_design/exercises/q3/: Drink.java
lib/src/main/java/copilot_for_design/exercises/q4/: ColorChangingLightPanels.java  Command.java  README.md  RemoteControl.java
lib/src/main/java/copilot_for_design/exercises/q5/: Mesh.java  Obstacle.java  README.md
lib/src/main/java/copilot_for_design/exercises/q6/: Fridge.java  ModernFridge.java  ModernStove.java  README.md  RusticFridge.java  RusticStove.java  Stove.java
lib/src/main/java/copilot_for_design/practice/: CopilotTutorial.java  README.md
lib/src/main/java/copilot_for_design/prototype/: README.md
lib/src/main/java/copilot_for_design/prototype/q1/: Afterword.java  Book.java  Chapter.java  Dedication.java  Drink.java  README.md  TitlePage.java
question_1/: README.md  gas_tank.py  low_gas_indicator.py  test.py
scripts/: init-devcontainer.sh  validate_commit_message.py
scripts/tests/: test_validate_commit_message.py
tests/: README.md  test_q1.py
(+12 files in other folders)
