[metadata]
name = copilot-for-design-exercises
version = 1.0
author = Callum Curtis
description = Exercises for studying utility of GitHub Copilot for design

[options]
python_requires = >=3.9
packages = find_namespace:

[options.packages.find]
include = copilot_for_design.*

[options.extras_require]
test = pytest